Update 'nodejs-yowbpogq' component image to: quay.io/rhtap_qe/nodejs-yowbpogq:efcb5e3c26edf41accaa53728c37fca2eb2480ef@sha256:787fd9a085a825ab0b3f2e671c3835f795fbf31e1336f21540887e31905c2004

--- a/components/nodejs-yowbpogq/overlays/development/deployment-patch.yaml
+++ b/components/nodejs-yowbpogq/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: nodejs-yowbpogq
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/nodejs-yowbpogq:efcb5e3c26edf41accaa53728c37fca2eb2480ef@sha256:787fd9a085a825ab0b3f2e671c3835f795fbf31e1336f21540887e31905c2004
+          name: container-image
